# gempakio

./: .codecov.yaml  .coveragerc  .gitignore  LICENSE  README.md  gem2py.py  gempakio.py  parsed.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: linting.yml  testing.yml
ci/: linting_requirements.txt  requirements.txt
examples/: gempakio_examples.ipynb  gempakio_examples.py
examples/data/: 19740403_sao.sfc  19740403_upa.snd  eta_740403_1200_f006.grd
gempakio/: __init__.py  common.py  decode.py  gemcalc.py  tools.py
gempakio/decode/: gempak.py  grib.py
gempakio/encode/: __init__.py  gempak.py
src/gempakio/: __init__.py  c_gemlib.c  common.py  gemcalc.py  tools.py
src/gempakio/decode/: __init__.py  c_decode.c  gempak.py  vgf.py
src/gempakio/encode/: __init__.py  gempak.py  vgf.py
tests/: test_grid_encode.py  test_grids.py  test_projections.py  test_sounding_encode.py  test_soundings.py  test_surface.py  test_surface_encode.py  test_vgf.py  test_vgf_encode.py
tests/data/: aed.grd  aed.npz  fills.vgf  fronts.vgf  gnomonic.grd  gnomonic.npz  jet.vgf  lea.grd  lea.npz  lines.vgf  lwc_std_sfc.csv  mercator.grd  mercator.npz  misc.vgf  msn_std_sfc.csv  msn_std_sfc.sfc  multi_date.grd  orthographic.grd  orthographic.npz  oun_sfc.gem  ship_sfc.csv  sig_airmet.vgf  sig_ccf.vgf  sig_intnl.vgf  sig_nonconv.vgf  sounding.npz  surface_temp.npz  surface_temp_pack.npz  surface_temp_unpack.npz  symbols.vgf  tca.vgf  text.vgf  tracks.vgf  tracks_v0.vgf  tracks_v1.vgf  volcano.vgf  watch.vgf  watch_v0.vgf  watch_v1.vgf  watch_v2.vgf  (+3 more)
