[project]
name = 'gempakIO'
description = 'Read GEMPAK data with pure Python.'
authors = [
    {name = 'Nathan Wendt', email = 'nathan.wendt@noaa.gov'},
]
readme = 'README.md'
license = {file = 'LICENSE'}
dynamic = ['version']
requires-python = '>=3.8'
dependencies = [
    'numpy',
    'pandas',
    'pyproj',
    'xarray'
]

[project.optional-dependencies]
lint = [
    'flake8',
    'pycodestyle',
    'pyflakes',
    'flake8-bugbear',
    'flake8-builtins',
    'flake8-comprehensions',
    'flake8-continuation',
    'flake8-copyright',
    'flake8-isort',
    'isort',
    'flake8-mutable',
    'flake8-pie',
    'flake8-print',
    'flake8-quotes',
    'flake8-requirements',
    'flake8-simplify',
    'flake8-docstrings',
    'pep8-naming',
    'pydocstyle',
]
test = [
    'pytest',
]

[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project.urls]
homepage = 'https://github.com/nawendt/gempakio'
repository = 'https://github.com/nawendt/gempakio'

[tool.isort]
line_length = 95
known_first_party = ['gempakio']
force_single_line = false
reverse_relative = true
use_parentheses = true
force_sort_within_sections = true
order_by_type = false
sort_relative_in_force_sorted_sections = true
combine_as_imports = true
combine_star = true

[tool.ruff]
line-length = 95
exclude = ['examples']
select = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'I', 'N', 'Q', 'R', 'S', 'T', 'U', 'W']
ignore = ['F405', 'I001', 'RET504', 'RET505', 'RET506', 'RET507', 'RUF100']

[tool.ruff.per-file-ignores]
'src/gempakio/__init__.py' = ['F401']
'tests/*.py' = ['S101']

[tool.ruff.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'

[tool.ruff.isort]
known-first-party = ['gempakio']
force-single-line = false
relative-imports-order = 'closest-to-furthest'
force-sort-within-sections = true
order-by-type = false
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 61

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = {attr = 'gempakio.__version__'}

[tool.setuptools.packages.find]
where = ['src']
