[metadata]
name = gempakIO
version = attr: gempakio.__version__
author = Nathan Wendt
author_email = nathan.wendt@noaa.gov
description = Read GEMPAK data with pure Python.
license = BSD-3-Clause
license_file = LICENSE

[build-system]
requires = ["setuptools"]

[options]
zip_safe = True
package_dir=
    =src
packages=find:
python_requires = >=3.9
setup_requires =
    setuptools
install_requires =
    numpy
    pandas
    pyproj
    xarray

[options.packages.find]
where = src

[options.extras_require]
line = 
    flake8
    ruff
    pycodestyle
    pyflakes
    flake8-continuation
    flake8-copyright
    flake8-isort
    isort
    flake8-requirements
    pydocstyle
test = 
    pytest

[pycodestyle]
ignore = W503
max-line-length = 95

[flake8]
max-line-length = 95
application-import-names = gempakio
import-order-style = google
copyright-check = True
copyright-author = Nathan Wendt
select = E301 E302 E303 E304 E305 E306 I R
ignore = F405 W503 RST902 SIM106
per-file-ignores =
    __init__.py:F401
exclude = 
    examples/*.py
